--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+div{
+    background-color: #ccc; 
+    padding: 5px; 
+    border-radius: 10px; 
+    width: 90%; 
+    max-width: 800px; 
+    margin: 10px auto;
+} 
+          
+    
+h3 {
+    font-size: .9em; 
+}
