Added some content and components

--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -15,4 +15,7 @@
   <button type="submit"  class="form-control btn btn-primary btn-lrg">Submit</button>
 </form>
 
+
+<hr>
+Hi {{formData.value.username}}
 </div>
