--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,9 +10,13 @@
   <p>{{subtitle}}</p>
   <p>Here are some helpful links:</p>
   <p>
-    <a target="_blank" rel="noopener" href="https://angular.io/tutorial">Tour of Heroes</a>
-    | <a target="_blank" rel="noopener" href="https://github.com/angular/angular-cli/wiki">CLI Documentation</a>
-    | <a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a>
-  
+    <a target="_blank" rel="noopener" href="https://angular.io/tutorial">Tour of Heroes</a> is an interactive tutorial
+    that guides you through the process of creating an app with Angular.
+  </p>
+  <p>Most developers don't start from scratch when making an app, although you could. The
+   <a target="_blank" rel="noopener" href="https://github.com/angular/angular-cli/wiki">CLI Documentation</a>
+   guides you through the process of using the most well-known tool for starting an Angular project.</p>
+   <p>Once you master Angular, keep up to date on the latest changes and developments by reading this 
+     <a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a>
   </p>
   </div>
